# xi

./: .gitignore  Cube.hs  Md2.hs  Tex.hs  Tga.hs  xi.cabal
Xi/: .Camera.hs.swp  .Types.hs.swp  Camera.hs  Debug.hs  Shader.hs  Types.hs  Util.hs  Xi.hs
csrc/: mat.c  mat.h  q.c  q.h  vec.c  vec.h
data/: Cube.frag  Cube.vert  Default.vert  Tex.frag  Triangle.vert
data/Shader/: .NormalUnlit.vsh.swp  NormalUnlit.fsh  NormalUnlit.vsh
src/: Xi.hs
src/Xi/: Camera.hs  Imports.hs  Types.hs  Util.hs
