name:                xi
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              jxv
maintainer:          https://github.com/jxv
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:  csrc/*.h,
                     csrc/*.c

library
  exposed-modules:     Xi,
                       Xi.Camera,
                       Xi.Util,
                       Xi.Xi,
                       Xi.Types,
                       Xi.Imports,
                       Xi.Debug,
                       Xi.Shader

  includes:            csrc/vec.h,
                       csrc/mat.h,
                       csrc/q.h

  c-sources:           csrc/vec.c,
                       csrc/mat.c,
                       csrc/q.c

  -- other-modules:       
  other-extensions:    OverloadedStrings,
                       CPP,
                       RecordWildCards,
                       TemplateHaskell,
                       TypeSynonymInstances,
                       NamedFieldPuns,
                       LambdaCase

  build-depends:       base >=4.7 && <4.8,
                       binary >=0.7 && <0.8,
                       OpenGLRaw >=1.5 && <1.6,
                       random >=1.0 && <1.1,
                       GLUT >=2.5 && <2.6,
                       bytestring >=0.10 && <0.11,
                       lens >=4.4 && <4.5,
                       array >=0.5 && <0.6,
                       linear >=1.10 && <1.11,
                       tuple >=0.3 && <0.4

  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010
